--- a/style.css
+++ b/style.css
@@ -63,6 +63,10 @@ ul{
     color: white;
     margin-top: 50px;
 }
+.main-button:hover{
+    background-color: #59cc7b;
+    color: #111;
+}
 .screen-border{
     text-align: center;
     font-size: 40px;
@@ -101,6 +105,11 @@ ul{
     font-size: 20px;
     border: none;
 }
+.know-more-btn:hover{
+    background-color: rgb(155, 150, 150);
+    color: #111;
+
+}
 .contact-btn{
     color: black;
     border-radius: 25px;
@@ -108,6 +117,11 @@ ul{
     width: 150px;
     height: 60px;
     font-size: 20px;
+    background-color: white;
+}
+.contact-btn:hover{
+    background-color: #59cc7b;
+    color: white;
 }
 .buttons{
     display: flex;
@@ -367,11 +381,13 @@ ul{
   }
   .discover-header{
     text-align: center;
-    font-size: 30px;
+    font-size: 32px;
   }
   .discover-paragraph{
     text-align: center;
-    font-size: 20px;
+    font-size: 25px;
+    width: 80%;
+
   }
   .printing-techniques{
     text-align: center;
@@ -454,6 +470,19 @@ ul{
   
 
   }
-  @media screen and (max-width: 412px) {
-
+/* Small tablets in portrait mode*/
+@media (min-width: 768px) and (max-width: 991px) {
+    body {
+      font-size: 17px;
+      overflow-x: hidden;
+    }
   }
+  
+  /* Large tablets  */
+  @media (min-width: 992px) and (max-width: 1199px) {
+    body {
+      font-size: 18px;
+      overflow-y: hidden;
+    }
+  }
+  
