--- a/style.css
+++ b/style.css
@@ -188,7 +188,7 @@ ul{
     margin-top: 100px;
 }
 .printing-quality-div{
-    width: 40%;
+    width: 50%;
 
 }
 .printing-quality-div h2{
@@ -385,14 +385,14 @@ ul{
   }
   .discover-paragraph{
     text-align: center;
-    font-size: 25px;
+    font-size: 20px;
 
   }
   .printing-techniques{
     text-align: center;
     font-size: 40px;
   }
-  .printing-techniques-para{
+  .printing-techniques-paragraph{
     text-align: center;
     font-size: 20px;
   }
@@ -440,6 +440,9 @@ ul{
     .printing-quality-img{
         width: 380px;
     }
+    .printing-quality-div{
+        width: 100%;
+    }
     .fashion-companies{
         display: flex;
         flex-direction: column;
@@ -481,7 +484,87 @@ ul{
   @media (min-width: 992px) and (max-width: 1199px) {
     body {
       font-size: 18px;
-      overflow-y: hidden;
+      overflow-x: hidden;
     }
   }
+  /* Large smartphones and small tablets like iPhone 14 Pro Max, Pixel 7 Pro */
+/* @media  (max-width: 430px) {
+    body {
+      font-size: 16px;
+      width: 100%;
+    }
+    header{
+        width: 694px
+    }
+    .main-page-content h1{
+        font-size: 60px;
+    }
+    .bed-img{
+        width: 680px;
+    }
+    .screen-border{
+        width: 630px;
+    }
+    .rasi-printing-company{
+        display: flex;
+        flex-direction: column;
+    }
+    .icon-description{
+        display: flex;
+        flex-direction: column;
+    }
+    .human-art{
+        display: flex;
+        flex-direction: column;
+    }
+    .printing-quality{
+        display: flex;
+        flex-direction: column;
+    }
+    .printing-quality-div{
+        width: 100%;
+    }
+    .fashion-companies{
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        flex-wrap: wrap;
+        width: 100%;
+    }
+    .partnered-companies{
+        display: flex;
+        flex-direction: column;
+    }
+    .fashion-clothes{
+        display: flex;
+        flex-direction: column;
+    }
+    .rasi-printing-company-div h1{
+        margin-top: 0px;
+        padding: 0;
+        width: 900px;
+        font-size: 50px;
+    }
+    .rasi-printing-company-div p{
+        width: 100%;
+        font-size: 30px;
+    }
+    .icon-description{
+        width: 580px;
+    }
+    .printing-techniques{
+        width: 100%;
+
+    }
+    .human-art img{
+        width: 680px;
+    }
+    .printing-techniques-paragraph{
+        font-size: 28px;
+        width: 100%;
+    }
+    .human-art p{
+        font-size: 20px;
+    } */
+  }
+  
   
